# cupy-mlp-from-scratch

./: .gitignore  README.md  gui.py  main.py  pyproject.toml  train.py
model/: bias.npz  model.npz  weights.npz
src/: cupy_test.py  model.py  preprocessing.py  utils.py
src/models/: mlp.py
